tests/NormalTests/paczka1/fuzzy1/53524879.err
Error in line 9: yHr7sA3 A961 23,7
Error in line 20: eIzw A284 55,8
Error in line 21: eIzw A598 65,8
Error in line 33: yHr7sA3 A274 -1,6
Error in line 36: A961 A274 -1,9
